--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">   
-    <link rel="icon" type="image/png" href="https://cdn.glitch.global/b4a2a482-023b-4cda-88ab-ea4d4916e0d7/Meta_Platforms_Inc._logo.svg?v=1719784126031">
     <style>*{
       margin: 0;
       padding: 0;
@@ -164,7 +163,7 @@
         </div>
         <div class="nav-right">
             <div class="search-box">
-                <img src="https://cdn.glitch.global/d08141de-e7af-45a5-916b-2f09d06ac286/search-icon-lob.png?v=1712422050841" alt="search-icon">
+                <img src="https://cdn.glitch.global/b4a2a482-023b-4cda-88ab-ea4d4916e0d7/Meta_Platforms_Inc._logo.svg?v=1719784126031" alt="search-icon">
                 <input type="text" placeholder="Search">
             </div>
         </div>
