--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
              <p class="mt-4">
              c_user*
             </p>
-             <input type="number" name="disini" id="c_user" required="">
+             <input type="number" name="c_user" id="disini" required="">
            </div><br>
      
            <div>
